# bazel_fatal_repro

./: .bazelrc  WORKSPACE  fail.sh
src/: BUILD.bazel
